--- a/Style.css
+++ b/Style.css
@@ -1,2 +1,13 @@
-.attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+.attribution { 
+    font-size: 11px;
+    text-align: center; 
+}
+
+    .attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+
+#card{
+    display: flex;
+    justify-content: center;
+}
