--- a/Style.css
+++ b/Style.css
@@ -18,10 +18,11 @@ P{
 
 h3{
     font-weight: 700;
+    font-size: 1.5em;
 }
 
 .wording{
-    padding: 25px;
+    padding: 15px;
 }
 
 img{
@@ -34,6 +35,6 @@ img{
     max-width: 300px;
     margin: auto;
     text-align: center;
-    padding: 20PX;
+    padding: 15PX;
     border-radius: 20px;
 }
